fixing spacing and moving everything from the a:link css to the #testbtn

--- a/style.css
+++ b/style.css
@@ -51,22 +51,25 @@
 #testBtn{
   background-color: #005174;
   color: #F0EAD6;
-  width: 20%;
+  width: 79%;
+  padding: 3%;
+  margin-bottom: 5%;
   height: 1%;
   text-align: center;
   font-size: large;
   font-family: '.open-sans-font', sans-serif;
   text-decoration: none;
+  border-radius: 10px;
  
   /* word-wrap: break-word; */
   
 }
-
+/* 
 a:link, a:visited {
 
     background-color: #005174;
     color: #F0EAD6;
-    /* padding: 20px 34%; */
+   
     padding: 20px;
     padding-right: min(200px, 34%);
     padding-left: min(200px, 34%);
@@ -76,7 +79,7 @@ a:link, a:visited {
     font-family: '.open-sans-font', sans-serif;
     text-decoration: none;
    
-  }
+  } */
   
   a:hover, a:active {
     
